--- a/research-preservation.html
+++ b/research-preservation.html
@@ -155,18 +155,18 @@
     <div class="project-text">
       <div class="project-header">
         <h1>
-          Send me a color
+          Digital Restoration Short-Film La Cruz de Mayo
           <span>Mechanical Gestures to Preserve Flowers:<br>An essay on color reproduction using contact duplication systems</span>
         </h1>
         <div class="project-meta">
-          <span>Film performance | research project</span>
-          <span>16mm film | 12min</span>
-          <span class="year">2024</span>
+          <span>Digital Film Restoration | research project</span>
+          <span>16mm film | 22min</span>
+          <span class="year">1978</span>
         </div>
       </div>
 
       <div class="project-block">
-        <p><strong>Director</strong><br>Mariana Torres</p>
+        <p><strong>Director</strong><br></p>
         <p><strong>Países de producción</strong><br>Portugal | Spain</p>
         <p><strong></strong> | Archive | Color</p>
       </div>
