--- a/research-preservation.html
+++ b/research-preservation.html
@@ -156,7 +156,6 @@
       <div class="project-header">
         <h1>
           Digital Restoration Short-Film La Cruz de Mayo
-          <span>Mechanical Gestures to Preserve Flowers:<br>An essay on color reproduction using contact duplication systems</span>
         </h1>
         <div class="project-meta">
           <span>Digital Film Restoration | research project</span>
@@ -166,49 +165,66 @@
       </div>
 
       <div class="project-block">
-        <p><strong>Director</strong><br></p>
-        <p><strong>Países de producción</strong><br>Portugal | Spain</p>
-        <p><strong></strong> | Archive | Color</p>
+        <p><strong>Director</strong><br>Miguel Secades y Miguel García</p>
+        <p><strong>País de producción</strong><br>Cuba</p>
       </div>
 
       <div class="project-block">
-        <p><strong>Con el apoyo de</strong></p>
+        <p><strong> Archive Colletion</strong></p>
         <p>
-          Elías Querejeta Zine Eskola (País Vasco)<br>
-          2Deo laboratorio centro cultural Tabakalera (País Vasco)<br>
-          Casa Estrela Association (Portugal)<br>
+          Archivistas Selvages Collective<br>
+          In colaboration With<br>
+          Elias Querjeta Zine Eskola (spain) <br>
         </p>
       </div>
 
       <div class="project-block">
-        <p><strong>C</strong></p>
         <p>
-          Production: Elias Querjeta Zine Eskola<br>
-          Cinematographer: Helena Estrela<br>
-          Development and duplication: Mariana Torres<br>
-          Sound Design: Catalina Giordani & Veronica Boggio<br>
-          Projectionists: Lorena Garcia | Matias Fajn | Inés Vasquez<br>
-          Photoquimical Laboratory: Elias Querjeta Zine Eskola
+          Production: Archivistas Selvages Collective<br>
+          Post producion Cordination: Lucia Malandro <br>
+          Digital Image Restoration: Mariana Torres<br>
+          Color grading: Mariana Torres & Lourenço Pinheiro<br>
+         Sound Restoration: Franco Bosco<br>
+        
         </p>
+      </div>
+      <div class="project-block presentations">
+        <p><strong>Presentations</strong></p>
+        <p>
+          <em>Cineteca de Madrid -Matadero-2024<br>
+            Focus Short films dedicated to Cuban amateur cinema.</em>
+          </p>
       </div>
 
       <div class="project-block synopsis">
         <p><strong>Sinopsis</strong></p>
         <p>
-          <em>It is a filmic performance that explores the mechanical gestures of 16mm projectors to reveal light as a material origin and color as an empirical exploration of vision, through a process of duplication in analog film that employs an old color technique from 1861 by Marxwell, called the chromatic separation technique. On the screen, thousands of chromatic possibilities unfold through filters and crystals, exploring the refraction and reflection of light in delicate flashes of melancholy. The images are flowers, where color generates new flowers, and where color itself acquires movement and will.</em>
+          <em>La Cruz de Mayo (1983) It is one significant recoveries
+             in the context of Cuban amateur cinema, as it is a short 
+             film about religious practices in a country politically 
+             assumed to be atheist, where any expression of religious
+              belief is censored.  
+              
+            the Archivistas Selvajes Collective has located and rescued
+            230 of the 546 films reported to them, originating from 17
+            creative cineclubs or independent collectives among the 84
+            registered with the National Federation of Cineclubs (FNCC)
+            before 1994. This work reflects a deep commitment to preserving 
+            cultural and historical records vital to Cuba’s identity, despite
+            the lack of institutional support.</em>
         </p>
       </div>
     </div>
 
     <!-- COLUNA VÍDEO -->
     <div class="video-fixed">
-      <iframe src="https://player.vimeo.com/video/1081106970?h=70594f4e3f" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+      <iframe src="https://vimeo.com/1084541446/b19ced0966?share=copy&fl=sv&fe=ci" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
 
   <!-- IMAGEM ABAIXO -->
   <div class="project-image container">
-    <img src="img/projeto.jpg" alt="Projeto">
+    <img src="cruz de mayo still1.tif" alt="Projeto">
   </div>
 </section>
 </main>
