--- a/about/about.html
+++ b/about/about.html
@@ -549,19 +549,15 @@ li a:hover .desc{
 
   <ul class="associations-list">
     <li>
-      <span class="assoc-name">AMIA — Association of Moving Image Archivists</span>
-      <span class="assoc-role">Member</span>
+      <span class="assoc-name">Navire Argo- An artist-run film lab, FRANCE </span>
+      <span class="assoc-role">Argonout Member since 2025</span>
     </li>
 
     <li>
-      <span class="assoc-name">FIAF — International Federation of Film Archives</span>
-      <span class="assoc-role">Research Affiliate</span>
+      <span class="assoc-name">CASULO — Local Culture Association, Portugal</span>
+      <span class="assoc-role">Research Associate in film Education</span>
     </li>
 
-    <li>
-      <span class="assoc-name">APORDOC — Associação Portuguesa de Documentaristas</span>
-      <span class="assoc-role">Member</span>
-    </li>
   </ul>
 
 </section>
@@ -582,17 +578,22 @@ li a:hover .desc{
          target="_blank" 
           rel="noopener noreferrer">
             <span class="desc">
-             Eye International Conference 2025- Panel Experimental Colour Practices
+             Eye International Conference - Panel Experimental Colour Practices
          </span>
           </a>
-      </li>
+           <li>
+            <span class="year">2024</span>
+            <span class="desc">Short-term Research Grant — Cinemateca Portuguesa</span>
+           </li>
+          <li>
+        <span class="year">2024</span>
+        <span class="desc">Dear Docs Fellowship -Doc's Kingdom International Seminar on Documentary Film</span>
+       </li>
+       <li>
         <span class="year">2023</span>
         <span class="desc">AMIA George Blood LP Women in Audiovisual Archiving and Technology Scholarship</span>
       </li>
-      <li>
-        <span class="year">2022</span>
-        <span class="desc">Short-term Research Grant — Cinemateca Portuguesa</span>
-      </li>
+    
     </ul>
 
 
