--- a/about/about.html
+++ b/about/about.html
@@ -606,7 +606,7 @@ li a:hover .desc{
 
    <figure class="presentation-item">
     <img src="presenting2.jpg" alt="Panel discussion at audiovisual archiving conference">
-    <figcaption>Panel discussion on audiovisual archiving</figcaption>
+    <figcaption>Panel discussion in Cinemateca Portuguesa About the Portuguese Experimental Artist Ernesto de Sousa </figcaption>
    </figure>
 
    <figure class="presentation-item">
