--- a/about/about.html
+++ b/about/about.html
@@ -581,21 +581,20 @@ li a:hover .desc{
              Eye International Conference - Panel Experimental Colour Practices
          </span>
           </a>
+          </li>
            <li>
             <span class="year">2024</span>
             <span class="desc">Short-term Research Grant — Cinemateca Portuguesa</span>
            </li>
-          <li>
-        <span class="year">2024</span>
+         <li><span class="year">2024</span>
         <span class="desc">Dear Docs Fellowship -Doc's Kingdom International Seminar on Documentary Film</span>
-       </li>
+        </li> 
        <li>
         <span class="year">2023</span>
         <span class="desc">AMIA George Blood LP Women in Audiovisual Archiving and Technology Scholarship</span>
       </li>
     
     </ul>
-
 
    <div class="presentation-photos">
 
