--- a/about/about.html
+++ b/about/about.html
@@ -573,6 +573,10 @@ li a:hover .desc{
 
     <ul class="grants-list">
       <li>
+            <span class="year">2026-upcoming</span>
+            <span class="desc">The 27th Contemporary Art Conservation Conference Museo Reina Sofía -Panel Expanded Cinema Preservation</span>
+      </li>
+      <li>
         <span class="year">2025</span>
         <a href="https://assets.eyefilm.nl/downloads/blocks/Eye-International-Conference-2025-booklet.pdf#page=8" 
          target="_blank" 
