--- a/about/about.html
+++ b/about/about.html
@@ -538,7 +538,7 @@ li a:hover .desc{
   </div>
 
     <!-- BOTÃO DE DOWNLOAD CV -->
-   <a href="https://drive.google.com/your-cv-link" target="_blank" class="cv-button">
+   <a href="https://drive.google.com/file/d/1b0IQ7Tk8rM7UFuDp2AuQbQ8YrBSXqVoW/view?usp=sharing" target="_blank" class="cv-button">
     cv
    </a>
   </div>  
