--- a/about/about.html
+++ b/about/about.html
@@ -603,7 +603,7 @@ li a:hover .desc{
    <div class="presentation-photos">
 
    <figure class="presentation-item">
-    <img src="about materials/4370eb11-5f9f-4504-aa5a-6e833e0a2735.jpg" alt="Conference presentation at FIAF Symposium, Paris">
+    <img src="about materials/4370eb11-5f9f-4504-aa5a-6e833e0a2735.jpg" alt="Conference presentation at EYE Museum">
     <figcaption>Eye International Conference 2025- Panel Experimental Colour Practices </figcaption>
    </figure>
 
@@ -613,6 +613,21 @@ li a:hover .desc{
    </figure>
 
    <figure class="presentation-item">
+    <img src="presenting3.jpg" alt="Lecture moment during academic conference">
+    <figcaption>Lecture session — research presentation</figcaption>
+   </figure>
+
+      <figure class="presentation-item">
+    <img src="presenting3.jpg" alt="Lecture moment during academic conference">
+    <figcaption>Lecture session — research presentation</figcaption>
+   </figure>
+
+      <figure class="presentation-item">
+    <img src="presenting3.jpg" alt="Lecture moment during academic conference">
+    <figcaption>Lecture session — research presentation</figcaption>
+   </figure>
+
+      <figure class="presentation-item">
     <img src="presenting3.jpg" alt="Lecture moment during academic conference">
     <figcaption>Lecture session — research presentation</figcaption>
    </figure>
