--- a/about/about.html
+++ b/about/about.html
@@ -608,18 +608,18 @@ li a:hover .desc{
    </figure>
 
    <figure class="presentation-item">
-    <img src="presenting2.jpg" alt="Panel discussion at audiovisual archiving conference">
+    <img src="QECinemateca.jpeg" alt="Panel discussion at audiovisual archiving conference">
     <figcaption>Panel discussion in Cinemateca Portuguesa About the Portuguese Experimental Artist Ernesto de Sousa </figcaption>
    </figure>
 
    <figure class="presentation-item">
-    <img src="presenting3.jpg" alt="Lecture moment during academic conference">
-    <figcaption>Lecture session — research presentation</figcaption>
+    <img src="C3presentation.jpeg" alt="Lecture moment during academic conference">
+    <figcaption>C3 research Group at EQZE — research presentation</figcaption>
    </figure>
 
       <figure class="presentation-item">
-    <img src="presenting3.jpg" alt="Lecture moment during academic conference">
-    <figcaption>Lecture session — research presentation</figcaption>
+    <img src="presentationsmc.jpg" alt="Lecture moment during academic conference">
+    <figcaption>Projectors in the Theather — Master Thesis presentation</figcaption>
    </figure>
 
       <figure class="presentation-item">
