--- a/research-preservation.html
+++ b/research-preservation.html
@@ -199,18 +199,18 @@
       <div class="project-block synopsis">
         <p><strong>Sinopsis</strong></p>
         <p>
-          <em>La Cruz de Mayo (1983) It is one significant recoveries
-             in the context of Cuban amateur cinema, as it is a short 
-             film about religious practices in a country politically 
-             assumed to be atheist, where any expression of religious
-              belief is censored.  
+          <em>La Cruz de Mayo (1983) It is one significant recoveries<br>
+             in the context of Cuban amateur cinema, as it is a short <br>
+             film about religious practices in a country politically <br>
+             assumed to be atheist, where any expression of religious<br>
+              belief is censored.<br>
               
-            the Archivistas Selvajes Collective has located and rescued
-            230 of the 546 films reported to them, originating from 17
-            creative cineclubs or independent collectives among the 84
-            registered with the National Federation of Cineclubs (FNCC)
-            before 1994. This work reflects a deep commitment to preserving 
-            cultural and historical records vital to Cuba’s identity, despite
+            the Archivistas Selvajes Collective has located and rescued<br>
+            230 of the 546 films reported to them, originating from 17<br>
+            creative cineclubs or independent collectives among the 84<br>
+            registered with the National Federation of Cineclubs (FNCC)<br>
+            before 1994. This work reflects a deep commitment to preserving <br>
+            cultural and historical records vital to Cuba’s identity, despite<br>
             the lack of institutional support.</em>
         </p>
       </div>
