--- a/about.html
+++ b/about.html
@@ -603,7 +603,7 @@ li a:hover .desc{
    <div class="presentation-photos">
 
    <figure class="presentation-item">
-    <img src="about materials/4370eb11-5f9f-4504-aa5a-6e833e0a2735.jpg" alt="Conference presentation at EYE Museum">
+    <img src="4370eb11-5f9f-4504-aa5a-6e833e0a2735.jpg" alt="Conference presentation at EYE Museum">
     <figcaption>Eye International Conference 2025- Panel Experimental Colour Practices </figcaption>
    </figure>
 
