--- a/about.html
+++ b/about.html
@@ -555,7 +555,7 @@ li a:hover .desc{
 
     <li>
       <span class="assoc-name">CASULO — Local Culture Association, Portugal</span>
-      <span class="assoc-role">Research Associate in film Education</span>
+      <span class="assoc-role">Research Associate in film pedagogys</span>
     </li>
 
   </ul>
