--- a/artistic-works.html
+++ b/artistic-works.html
@@ -195,7 +195,15 @@
       <div class="project-block synopsis">
         <p><strong>Sinopsis</strong></p>
         <p>
-          <em>It is a filmic performance that explores the mechanical gestures of 16mm projectors to reveal light as a material origin and color as an empirical exploration of vision, through a process of duplication in analog film that employs an old color technique from 1861 by Marxwell, called the chromatic separation technique. On the screen, thousands of chromatic possibilities unfold through filters and crystals, exploring the refraction and reflection of light in delicate flashes of melancholy. The images are flowers, where color generates new flowers, and where color itself acquires movement and will.</em>
+          <em>It is a filmic performance that explores the mechanical gestures<br>
+             of 16mm projectors to reveal light as a material origin and color<br>
+              as an empirical exploration of vision, through a process of duplication<br>
+               in analog film that employs an old color technique from 1861 by Marxwell,<br>
+                called the chromatic separation technique. On the screen, thousands of <br>
+                chromatic possibilities unfold through filters and crystals, exploring <br>
+                the refraction and reflection of light in delicate flashes of melancholy.<br>
+                 The images are flowers, where color generates new flowers, <br>
+                 and where color itself acquires movement and will.</em>
         </p>
       </div>
     </div>
