--- a/artistic-works.html
+++ b/artistic-works.html
@@ -155,7 +155,7 @@
     <div class="project-text">
       <div class="project-header">
         <h1>
-          Send me a color
+          Send me a color<br>
           <span>Mechanical Gestures to Preserve Flowers:<br>An essay on color reproduction using contact duplication systems</span>
         </h1>
         <div class="project-meta">
