--- a/artistic-works.html
+++ b/artistic-works.html
@@ -167,7 +167,7 @@
 
       <div class="project-block">
         <p><strong>Director</strong><br>Mariana Torres</p>
-        <p><strong>Países de producción</strong><br>Portugal | Spain</p>
+        <p><strong>country</strong><br>Portugal | Spain</p>
         <p><strong></strong> | Archive | Color</p>
       </div>
 
