--- a/artistic-works.html
+++ b/artistic-works.html
@@ -156,7 +156,7 @@
       <div class="project-header">
         <h1>
           Send me a color<br>
-          <span>Mechanical Gestures to Preserve Flowers:<br>An essay on color reproduction using contact duplication systems</span>
+          <span>Mechanical Gestures to Preserve Flowers:<br>An essay on color reproduction <br>using contact duplication systems</span>
         </h1>
         <div class="project-meta">
           <span>Film performance | research project</span>
