--- a/analogue-film.html
+++ b/analogue-film.html
@@ -5,47 +5,53 @@
   <title>Analogue Film Practice – Mariana Torres</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+
   <!-- Fonts -->
   <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
   <style>
-    :root {
-      --bg-soft: #090b10;
-      --text-main: #f5f5f5;
-      --text-muted: #a6a9b5;
-      --accent: #78d3ff;
-      --max-width: 1100px;
+    :root{
+      --bg:#06070b;
+      --text:#f2f4f7;
+      --muted: rgba(242,244,247,.70);
+      --muted2: rgba(242,244,247,.55);
+      --max: 1120px;
+      --hdr-h: 64px;
     }
 
-    body {
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-      background: radial-gradient(circle at top, #141623 0, #050608 55%);
-      color: var(--text-main);
-      font-family: "Source Serif 4", serif;
-      -webkit-font-smoothing: antialiased;
+    *{ box-sizing:border-box; }
+    html, body{ height:100%; margin:0; }
+
+    body{
+      font-family:"Source Serif 4", serif;
+      color: var(--text);
+      background-color: var(--bg);
+      background: url("Timeline2.gif.gif") center/cover no-repeat fixed;
     }
 
-    /* ---------------- HEADER + MENU ---------------- */
+    body::before{
+      content:"";
+      position: fixed;
+      inset: 0;
+      background:
+        radial-gradient(1200px 700px at 50% 40%, rgba(6,7,11,.34), rgba(6,7,11,.12) 55%, rgba(6,7,11,.28) 100%),
+        linear-gradient(to bottom, rgba(6,7,11,.24), rgba(6,7,11,.24));
+      pointer-events:none;
+      z-index:0;
+    }
 
-   header, main{ position: relative; z-index: 1; }
-
+    header, main{ position: relative; z-index: 1; }
+    /* ===== header minimal ===== */
     header{
       position: fixed;
       inset: 0 0 auto 0;
       height: var(--hdr-h);
-      width: 100%;
       z-index: 1000;
       background: linear-gradient(to bottom, rgba(6,7,11,.88), rgba(6,7,11,.35));
       border-bottom: 1px solid rgba(255,255,255,.08);
       backdrop-filter: blur(10px);
     }
-
     nav{
       max-width: var(--max);
       margin:0 auto;
@@ -54,16 +60,26 @@
       display:flex;
       align-items:center;
       justify-content: space-between;
+      gap: 16px;
     }
+  .brand{
+  font-family:"Bebas Kai", system-ui, sans-serif;
+  letter-spacing:.18em;
+  white-space: nowrap;
 
-    .brand{
-      font-family:"Bebas Kai", system-ui, sans-serif;
-      letter-spacing:.18em;
-      white-space: nowrap;
-    }
+  color: var(--muted);        /* 👈 fixa a cor */
+  text-decoration: none;     /* 👈 remove sublinhado */
+  opacity: .9;
+}
+
+.brand:hover{
+  color: var(--text);        /* igual ao menu */
+  opacity: 1;
+}
 
     .menu{
       list-style:none;
+      color: var(--muted);
       display:flex;
       gap: 14px;
       margin:0;
@@ -71,14 +87,12 @@
       font-size:.94rem;
       color: var(--muted);
     }
-
     .menu a{
       text-decoration:none;
       color: inherit;
       opacity:.9;
       white-space: nowrap;
     }
-
     .menu a:hover{ opacity:1; color: var(--text); }
 
     main{ padding-top: var(--hdr-h); }
@@ -123,7 +137,6 @@
     .dropdown:hover .dropdown-content {
       display: block;
     }
-
 
     /* ---------------- HERO SECTION (Analogue Film Practice) ---------------- */
 
