--- a/research-preservation.html
+++ b/research-preservation.html
@@ -218,9 +218,15 @@
 
     <!-- COLUNA VÍDEO -->
     <div class="video-fixed">
-      <iframe src="https://vimeo.com/1084541446/b19ced0966?share=copy&fl=sv&fe=ci" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-    </div>
-  </div>
+  <iframe
+    src="https://player.vimeo.com/video/1084541446?h=b19ced0966"
+    width="640"
+    height="360"
+    frameborder="0"
+    allow="autoplay; fullscreen; picture-in-picture"
+    allowfullscreen>
+  </iframe>
+</div>
 
   <!-- IMAGEM ABAIXO -->
   <div class="project-image container">
