--- a/artistic-works.html
+++ b/artistic-works.html
@@ -89,7 +89,6 @@
       background: #0a0c11;
       padding: 90px 22px 140px;
     }
-
  .project-wrapper {
   display: flex;
   gap: 20px;
@@ -101,6 +100,12 @@
 
   display: flex;
   flex-direction: column;
+}
+.project-header{
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .video-fixed {
