--- a/research-preservation.html
+++ b/research-preservation.html
@@ -102,6 +102,12 @@
   display: flex;
   flex-direction: column;
 }
+.h1 {
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
 
 
 .video-fixed {
