--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         linear-gradient(to bottom, var(--overlay), var(--overlay));
       pointer-events:none;
       z-index:0;
+      filter: brightness(65%) contrast(115%);
     }
 
     header, main{ position: relative; z-index: 1; }
