--- a/artistic-works.html
+++ b/artistic-works.html
@@ -221,7 +221,10 @@
 
   <!-- IMAGEM ABAIXO -->
   <div class="project-image container">
-    <img src="img/projeto.jpg" alt="Projeto">
+    <img src="Send me a color/Captura de ecrã 2025-12-19 173446.png" alt="Projeto">
+    <img src="Send me a color/Untitled_1.1.20.jpg" alt="Projeto">
+    <img src="Send me a color/Untitled_1.2.2.jpg" alt="Projeto">
+    <img src="Send me a color/Untitled_1.18.1.jpg" alt="Projeto">
   </div>
 </section>
 </main>
