--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       -webkit-font-smoothing: antialiased;
       background: url("Timeline2.gif.gif") center/cover no-repeat fixed;
       background-color: var(--bg);
+      filter: brightness(65%) contrast(115%);
     }
 
     /* soft layer over GIF */
