--- a/artistic-works.html
+++ b/artistic-works.html
@@ -30,6 +30,7 @@
 
     header, main{ position: relative; z-index: 1; }
 
+    header, main{ position: relative; z-index: 1; }
     /* ===== header minimal ===== */
     header{
       position: fixed;
@@ -40,9 +41,8 @@
       border-bottom: 1px solid rgba(255,255,255,.08);
       backdrop-filter: blur(10px);
     }
-
     nav{
-      max-width: var(--max-width);
+      max-width: var(--max);
       margin:0 auto;
       height:100%;
       padding:0 22px;
@@ -51,37 +51,82 @@
       justify-content: space-between;
       gap: 16px;
     }
+  .brand{
+  font-family:"Bebas Kai", system-ui, sans-serif;
+  letter-spacing:.18em;
+  white-space: nowrap;
 
-    .brand{
-      font-family:"Bebas Kai", system-ui, sans-serif;
-      letter-spacing:.18em;
-      white-space: nowrap;
-      color: var(--text-muted);
-      text-decoration: none;
-      opacity: .9;
-    }
+  color: var(--muted);        /* 👈 fixa a cor */
+  text-decoration: none;     /* 👈 remove sublinhado */
+  opacity: .9;
+}
 
-    .brand:hover{ color: var(--text-main); opacity:1; }
+.brand:hover{
+  color: var(--text);        /* igual ao menu */
+  opacity: 1;
+}
 
     .menu{
       list-style:none;
+      color: var(--muted);
       display:flex;
       gap: 14px;
       margin:0;
       padding:0;
       font-size:.94rem;
-      color: var(--text-muted);
+      color: var(--muted);
     }
-
     .menu a{
       text-decoration:none;
       color: inherit;
       opacity:.9;
       white-space: nowrap;
     }
-    .menu a:hover{ opacity:1; color: var(--text-main); }
+    .menu a:hover{ opacity:1; color: var(--text); }
 
     main{ padding-top: var(--hdr-h); }
+    /* Dropdowns */
+    .dropdown {
+      position: relative;
+    }
+
+    .dropdown > a::after {
+      content: " ▾";
+      font-size: 0.7em; /* seta mais discreta */
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      top: 26px;
+      left: 0;
+      min-width: 220px;
+      background: rgba(5, 6, 8, 0.97);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      padding: 10px 0;
+      list-style: none;
+      z-index: 999;
+    }
+
+    .dropdown-content li {
+      padding: 4px 14px;
+      white-space: nowrap;
+    }
+
+    .dropdown-content li a {
+      display: block;
+      color: var(--text-muted);
+    }
+
+    .dropdown-content li a:hover {
+      color: var(--accent);
+      background: rgba(255, 255, 255, 0.06);
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
 
     /* ================= PROJECT LAYOUT ================= */
 
