--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       color: var(--text);
       font-family:"Source Serif 4", serif;
       -webkit-font-smoothing: antialiased;
-      background: url("Timeline2.gif.gif") center/cover no-repeat fixed;
+      background: url("Timeline2.gif.gif") center/cover no-repeat fixed; filter: brightness(60%) contrast(120%);
       background-color: var(--bg);
     }
 
