--- a/artistic-works.html
+++ b/artistic-works.html
@@ -171,14 +171,20 @@
 }
 
 .project-image {
+  flex: 1; /* mesma proporção do texto */
   width: 100%;
   margin-top: 40px;
+  position: relative;
+  aspect-ratio: 16/9;
+  border-radius: 6px;
+  overflow: hidden;
 }
 
 .project-image img {
   width: 100%;
   height: auto;
   display: block;
+  
 }
   </style>
 </head>
