--- a/projects.html
+++ b/projects.html
@@ -5,107 +5,121 @@
   <title>Projects – Mariana Torres</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Fonts -->
+<!-- Fonts -->
   <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
   <style>
-    :root {
-      --bg-soft: #090b10;
-      --text-main: #f5f5f5;
-      --text-muted: #a6a9b5;
-      --accent: #78d3ff;
-      --max-width: 1100px;
+    :root{
+      --bg:#06070b;
+      --text:#f2f4f7;
+      --muted: rgba(242,244,247,.70);
+      --muted2: rgba(242,244,247,.55);
+
+      --max: 1120px;
+      --hdr-h: 64px;
+
+      --line: rgba(255,255,255,.22);
+      --line-soft: rgba(255,255,255,.14);
+      --overlay: rgba(6,7,11,.24);
     }
 
-    body {
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-      background: radial-gradient(circle at top, #141623 0, #050608 55%);
-      color: var(--text-main);
-      font-family: "Source Serif 4", serif;
+    *{ box-sizing:border-box; }
+    html, body{ height:100%; }
+
+    body{
+      margin:0;
+      color: var(--text);
+      font-family:"Source Serif 4", serif;
       -webkit-font-smoothing: antialiased;
+      background: url("Timeline2.gif.gif") center/cover no-repeat fixed;
+      background-color: var(--bg);
     }
+    .bg-gif {
+  position: fixed;
+  inset: 0;
+  background: url("Timeline2.gif.gif") center / cover no-repeat;
+  filter: brightness(80%) contrast(115%);
+  z-index: -1;
+  pointer-events: none;
+}
 
-    /* ---------------- HEADER + MENU ---------------- */
-
-    header {
+    /* soft layer over GIF */
+    body::before{
+      content:"";
       position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: 68px;
-      background: rgba(5, 6, 8, 0.90);
-      backdrop-filter: blur(6px);
+      inset: 0;
+      background:
+        radial-gradient(1200px 700px at 50% 40%, rgba(6,7,11,.34), rgba(6,7,11,.12) 55%, rgba(6,7,11,.28) 90%),
+        linear-gradient(to bottom, var(--overlay), var(--overlay));
+      pointer-events:none;
+      z-index:0;
+    }
+
+    header, main{ position: relative; z-index: 1; }
+
+    /* ===== header minimal ===== */
+    header{
+      position: fixed;
+      inset: 0 0 auto 0;
+      height: var(--hdr-h);
       z-index: 1000;
+      background: linear-gradient(to bottom, rgba(6,7,11,.88), rgba(6,7,11,.35));
+      border-bottom: 1px solid rgba(255,255,255,.08);
+      backdrop-filter: blur(10px);
     }
-
-    nav {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      height: 100%;
-      padding: 0 20px;
-      display: flex;
+    nav{
+      max-width: var(--max);
+      margin:0 auto;
+      height:100%;
+      padding:0 22px;
+      display:flex;
+      align-items:center;
       justify-content: space-between;
-      align-items: center;
+      gap: 16px;
     }
+  .brand{
+  font-family:"Bebas Kai", system-ui, sans-serif;
+  letter-spacing:.18em;
+  white-space: nowrap;
 
-    /* Logotipo / Nome */
-    .brand {
-      font-family: "Bebas Kai";
-      font-size: 1.2rem;
-      letter-spacing: 0.17em;
-      color: var(--text-main);
-      text-decoration: none;
+  color: var(--muted);        /* 👈 fixa a cor */
+  text-decoration: none;     /* 👈 remove sublinhado */
+  opacity: .9;
+}
+
+.brand:hover{
+  color: var(--text);        /* igual ao menu */
+  opacity: 1;
+}
+
+    .menu{
+      list-style:none;
+      color: var(--muted);
+      display:flex;
+      gap: 14px;
+      margin:0;
+      padding:0;
+      font-size:.94rem;
+      color: var(--muted);
     }
-
-    /* Menu */
-    .menu {
-      list-style: none;
-      display: flex;
-      gap: 22px;
-      margin: 0;
-      padding: 0;
-      font-size: 0.92rem;
-      color: var(--text-muted);
-      align-items: center;
-    }
-
-    .menu a {
+    .menu a{
+      text-decoration:none;
       color: inherit;
-      text-decoration: none;
-      position: relative;
-      padding-bottom: 2px;
+      opacity:.9;
       white-space: nowrap;
     }
+    .menu a:hover{ opacity:1; color: var(--text); }
 
-    .menu a:hover {
-      color: var(--accent);
-    }
-
-    /* Underline hover */
-    .menu a::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 0%;
-      height: 1px;
-      background: var(--accent);
-      transition: width 0.2s;
-    }
-
-    .menu a:hover::after {
-      width: 100%;
-    }
-
+    main{ padding-top: var(--hdr-h); }
     /* Dropdowns */
     .dropdown {
       position: relative;
+    }
+
+    .dropdown > a::after {
+      content: " ▾";
+      font-size: 0.7em; /* seta mais discreta */
     }
 
     .dropdown-content {
@@ -139,6 +153,7 @@
     .dropdown:hover .dropdown-content {
       display: block;
     }
+
 
     /* ---------------- PAGE LAYOUT ---------------- */
 
