--- a/projects.html
+++ b/projects.html
@@ -158,9 +158,8 @@
     /* ---------------- PAGE LAYOUT ---------------- */
 
     main {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 120px 20px 60px; /* 120px para compensar o header fixo */
+    background: #0a0c11;
+      padding: 90px 22px 140px;
     }
 
     .page-header {
