--- a/artistic-works.html
+++ b/artistic-works.html
@@ -197,7 +197,7 @@
 }
 
 .project-image {
-  flex: 1; /* mesma proporção do texto */
+   /* mesma proporção do texto */
   columns: 3;
   column-gap: 1.2rem;
 }
