--- a/artistic-works.html
+++ b/artistic-works.html
@@ -206,6 +206,7 @@
   width: 100%;
   margin-bottom: 1.2rem;
   break-inside: avoid;
+  filter: brightness(80%) contrast(115%)
 }
   </style>
 </head>
