--- a/artistic-works.html
+++ b/artistic-works.html
@@ -179,6 +179,33 @@
   flex-direction: column;
   align-items: flex-end;
 }
+/* Botão CV alinhado com os contactos na vertical */
+/* =======================
+   BOTÃO CV
+======================= */
+.cv-button {
+  display: inline-block;
+  margin-top: 28px;
+  padding: 10px 24px;
+  background: rgba(242,244,247,.08);
+  border: 3px double #f2f4f7;
+  color: var(--muted);
+  text-decoration: none;
+  font-family: "Bebas Kai", system-ui, sans-serif;
+  letter-spacing: .12em;
+  text-transform: uppercase;
+  transition: all .3s ease;
+  border-radius: 1px;
+  text-align: center;
+  align-self: center;  /* centraliza dentro do flex container .about-side */
+  
+}
+
+.cv-button:hover {
+  background: rgba(242,244,247,.15);
+  border-color: rgba(242,244,247,.35);
+  color: var(--text);
+}
 .video-fixed {
   flex: 1; /* mesma proporção do texto */
   position: relative;
@@ -207,6 +234,13 @@
   margin-bottom: 1.2rem;
   break-inside: avoid;
   filter: brightness(80%) contrast(115%)
+}
+.project-image video {
+  width: 100%;
+  margin-bottom: 1.2rem;
+  break-inside: avoid;
+  display: block; /* garante que o vídeo respeite o layout */
+  object-fit: cover; /* faz o vídeo preencher o espaço proporcionalmente */
 }
   </style>
 </head>
@@ -303,7 +337,13 @@
                  and where color itself acquires movement and will.</em>
         </p>
       </div>
+        <div>    <!-- BOTÃO DE DOWNLOAD thesis -->
+      <a href="https://drive.google.com/file/d/1Sq69f5iuo5Z0aUSVQ1WPcYwWDqgfFYCr/view?usp=sharing" target="_blank" class="cv-button">
+        Master Thesis
+       </a>
+      </div>
     </div>
+
 
     <!-- COLUNA VÍDEO -->
     <div class="video-fixed">
@@ -317,6 +357,11 @@
     <img src="Send me a color/Untitled_1.1.20.jpg" alt="Projeto">
     <img src="Send me a color/Untitled_1.2.2.jpg" alt="Projeto">
     <img src="Send me a color/Untitled_1.18.1.jpg" alt="Projeto">
+    <video autoplay muted loop>
+    <source src="Send me a color/Sin título-1 al 50% (CMYK_8) _ 2023-06-05 19-17-20.mp4" type="video/mp4">
+      Seu navegador não suporta o elemento de vídeo.
+    </video>
+     <img src="Send me a color/Prueva de color.jpeg" alt="Projeto">
   </div>
 </section>
 </main>
