--- a/about.html
+++ b/about.html
@@ -254,7 +254,7 @@ html lang="en">
    BOTÃO CV
 ======================= */
 .cv-button {
-  display: inline-block;
+  display: flex;
   margin-top: 28px;
   padding: 10px 24px;
   background: rgba(242,244,247,.08);
@@ -266,8 +266,8 @@ html lang="en">
   text-transform: uppercase;
   transition: all .3s ease;
   border-radius: 1px;
-  text-align: center;
-  align-self: center;  /* centraliza dentro do flex container .about-side */
+  text-align: flex-end;
+  align-self: flex-end;  /* centraliza dentro do flex container .about-side */
   
 }
 
