--- a/artistic-works.html
+++ b/artistic-works.html
@@ -197,7 +197,7 @@
   transition: all .3s ease;
   border-radius: 1px;
   text-align: center;
-  align-self: center;  /* centraliza dentro do flex container .about-side */
+  align-self: flex-end;  /* centraliza dentro do flex container .about-side */
   
 }
 
