--- a/artistic-works.html
+++ b/artistic-works.html
@@ -196,7 +196,7 @@
   text-transform: uppercase;
   transition: all .3s ease;
   border-radius: 1px;
-  text-align: center;
+  text-align: flex-end;
   align-self: flex-end;  /* centraliza dentro do flex container .about-side */
   
 }
