--- a/artistic-works.html
+++ b/artistic-works.html
@@ -242,6 +242,33 @@
   display: block; /* garante que o vídeo respeite o layout */
   object-fit: cover; /* faz o vídeo preencher o espaço proporcionalmente */
 }
+.overlay {
+  display: none; /* escondido por padrão */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.8);
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.overlay img,
+.overlay video {
+  max-width: 90%;
+  max-height: 90%;
+}
+
+#close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  color: white;
+  font-size: 2rem;
+  cursor: pointer;
+}
   </style>
 </head>
 
@@ -363,8 +390,13 @@
     </video>
      <img src="Send me a color/Prueva de color.jpeg" alt="Projeto">
   </div>
+  <div id="overlay" class="overlay">
+  <span id="close">&times;</span>
+  <img id="overlay-img" src="" alt="">
+  <video id="overlay-video" src="" controls autoplay></video>
+</div>
 </section>
 </main>
-
+<script src="script.js"></script>
 </body>
 </html>
