--- a/about.html
+++ b/about.html
@@ -422,31 +422,32 @@ li a:hover .desc{
   cursor: zoom-in;
 }
 
-.presentation-photos img:hover{
-  transform: scale(1.015);
-  opacity: 1;
-}
-.lightbox{
+.overlay {
+  display: none; /* escondido por padrão */
   position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,.85);
-  display: flex;
-  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.8);
   justify-content: center;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity .3s ease;
-  z-index: 999;
+  align-items: center;
+  z-index: 9999;
 }
 
-.lightbox.active{
-  opacity: 1;
-  pointer-events: all;
-}
-.lightbox img{
-  cursor: zoom-out;
+.overlay img{
+  max-width: 90%;
+  max-height: 90%;
 }
 
+#close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  color: white;
+  font-size: 2rem;
+  cursor: pointer;
+}
   </style>
 </head>
 <body>
@@ -630,13 +631,15 @@ li a:hover .desc{
     <figcaption>Lecture session — research presentation</figcaption>
    </figure>
 
-   <div class="lightbox" id="lightbox">
-   <img id="lightbox-img" src="" alt="">
+      <div id="overlay" class="overlay">
+      <span id="close">&times;</span>
+      <img id="overlay-img" src="" alt="">
   
   </div>
 
   </div>
 </section>
  </main>
+ <script src="script.js"></script>
 </body>
 </html>
