--- a/artistic-works.html
+++ b/artistic-works.html
@@ -224,24 +224,22 @@
 }
 
 .project-image {
-   /* mesma proporção do texto */
   columns: 3;
   column-gap: 1rem;
 }
 
-.project-image img {
-  width: 100%;
-  margin-bottom: 1.2rem;
-  break-inside: avoid;
-  filter: brightness(80%) contrast(115%)
-}
+.project-image img,
 .project-image video {
   width: 100%;
   margin-bottom: 1.2rem;
   break-inside: avoid;
-  display: block; /* garante que o vídeo respeite o layout */
-  object-fit: cover; /* faz o vídeo preencher o espaço proporcionalmente */
+  filter: brightness(80%) contrast(115%);
+  display: block;
+  object-fit: cover;
+  cursor: pointer;
 }
+
+/* Overlay */
 .overlay {
   display: none; /* escondido por padrão */
   position: fixed;
@@ -384,10 +382,7 @@
     <img src="Send me a color/Untitled_1.1.20.jpg" alt="Projeto">
     <img src="Send me a color/Untitled_1.2.2.jpg" alt="Projeto">
     <img src="Send me a color/Untitled_1.18.1.jpg" alt="Projeto">
-    <video autoplay muted loop>
-    <source src="Send me a color/Sin título-1 al 50% (CMYK_8) _ 2023-06-05 19-17-20.mp4" type="video/mp4">
-      Seu navegador não suporta o elemento de vídeo.
-    </video>
+    <video src="Send me a color/Untitled_1.18.1.mp4" muted loop></video>
      <img src="Send me a color/Prueva de color.jpeg" alt="Projeto">
   </div>
   <div id="overlay" class="overlay">
@@ -395,8 +390,10 @@
   <img id="overlay-img" src="" alt="">
   <video id="overlay-video" src="" controls autoplay></video>
 </div>
+
+<!-- Link para o JS -->
+<script src="script.js"></script>
 </section>
 </main>
-<script src="script.js"></script>
 </body>
 </html>
