--- a/research-preservation.html
+++ b/research-preservation.html
@@ -327,7 +327,7 @@
 
   <!-- IMAGEM ABAIXO -->
   <div class="project-image container">
-    <img src="cruz de mayo still1.tif" alt="Projeto">
+    <img src="research preservation/Untitled_1.30.2.jpg" alt="Projeto">
   </div>
 </section>
 </main>
