--- a/research-preservation.html
+++ b/research-preservation.html
@@ -253,7 +253,7 @@
     <div class="project-text">
       <div class="project-header">
         <h1>
-          Digital Restoration Short-Film La Cruz de Mayo
+          Digital Restoration<br> Short-Film La Cruz de Mayo
         </h1>
         <div class="project-meta">
           <span>Digital Film Restoration | research project</span>
