--- a/about.html
+++ b/about.html
@@ -535,7 +535,7 @@ li a:hover .desc{
 
         <div class="contact-item">
           <span class="icon">↗</span>
-          <a href="https://vimeo.com/teuvimeo" target="_blank">
+          <a href="https://vimeo.com/user116342399?fl=pp&fe=sh" target="_blank">
             Vimeo
            </a>
     </div>
