--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
 
         <div class="contact-item">
           <span class="icon">↗</span>
-          <a href="https://vimeo.com/teuvimeo" target="_blank">Vimeo</a>
+          <a href="https://vimeo.com/user116342399?fl=pp&fe=sh" target="_blank">Vimeo</a>
         </div>
       </div>
     </div>
