--- a/artistic-works.html
+++ b/artistic-works.html
@@ -315,8 +315,8 @@
           <span>Mechanical Gestures to Preserve Flowers:<br>An essay on color reproduction <br>using contact duplication systems</span>
         </h1>
         <div class="project-meta">
-          <span>Film performance | research project</span>
-          <span>16mm film | 12min</span>
+          <span>Film performance | 3 screen projection<br></span>
+          <span>16mm film | 12min<br></span>
           <span class="year">2024</span>
         </div>
       </div>
